@@ -1,3 +1,3 @@
 version=0.4.1
-build=30
-date=2012-08-04
+build=32
+date=2012-08-06
